 - Module::Build::Compat handling of INSTALL*LIB (RT#43827)
 - Module::Build::Compat and recursive test files (RT#39171)
 - Fixed bug linking non-standard XS names on Windows (RT#38065)
 - Run PL files that don't generate any file (RT#39365)
 - HTML generation failure no longer fatal (RT#36660)
 - realclean might not delete Build.bat on Windows (RT#43863)

 Other
 - On MSWin32, bumped File::Spec prereq to 3.30 for a variety of fixes
 - Add support for VMS in Unix compatibility mode (RT#42157)

0.33_02 - Mon Jun 15 12:23:55 EDT 2009

 Bug-fixes:
 - Fixed tests for bleadperl

0.33_01 - Sat Jun 13 20:24:42 EDT 2009

 Bug-fixes:
 - Fixed RT#42724: consolidated VMS fixes [patch by CBERRY]
 - Fixed RT#46338: passthrough Makefile.PL cleans Makefile during distclean
 - Fixed RT#45700: t/compat.t for HP/UX make

 Other:
 - Adds current Module::Build to configure_requires (and build_requires) 
   if no configure_requires is specified
 - Always normalizes version number tuples in META.yml (e.g. 'v1.2.0')
   (Partially addresses RT#46150) 
 - Normalizes a generated dist_version (e.g. from a .pm file) -- 
   dist_version set manually in Build.PL is not normalized
 - Documentation update for create_license
 - Minor POD cleanup

0.33 - Sun May  3 20:16:34 PDT 2009

 Bug-fixes:
 - Fixed RT#45462: Compat.pm needs to reference 'Build.com' on VMS
   [patch from John Malmberg]
 - Fixed RT#45461: ext.t on VMS [patch from John Malmberg]
 - Fixed RT#43861: Module::Build::PPMMaker has broken PPD name
   versioning for v5.10+

0.32_01 - Tue Apr 14 17:14:22 PDT 2009

 Bug-fixes:
 - Module::Build::Compat had stopped adding "PL_FILES => {}" when no
   PL_files property was set in Build.PL; restored old behavior and fixed
   tests and documentation related to this issue [David Golden]
 - Caches ExtUtils::CBuilder object in a temporary stash instead of properties 
 - Fixed undef resources->license in META.yml (RT #44453).
 - Use $^X instead of 'perl' in t/ext.t [David Golden] (RT #43485)
