@@ -2,7 +2,7 @@
 
 use strict;
 use lib $ENV{PERL_CORE} ? '../lib/Module/Build/t/lib' : 't/lib';
-use MBTest tests => 52;
+use MBTest tests => 60;
 
 use_ok 'Module::Build';
 ensure_blib('Module::Build');
@@ -203,6 +203,38 @@ $dist->chdir_in;
   is_deeply $mb->extra_linker_flags,   ['-L/foo', '-L/bar'], "Should split shell string into list";
 }
 
+# Test include_dirs.
+{
+  ok my $mb = Module::Build->new(
+    module_name => $dist->name,
+    include_dirs => [qw(/foo /bar)],
+  );
+  is_deeply $mb->include_dirs, ['/foo', '/bar'], 'Should have include dirs';
+
+  # Try a string.
+  ok $mb = Module::Build->new(
+    module_name => $dist->name,
+    include_dirs => '/foo',
+  );
+  is_deeply $mb->include_dirs, ['/foo'], 'Should have string include dir';
+
+  # Try again with command-line args
+  eval { Module::Build->run_perl_script(
+      'Build.PL', [],
+      ['--include_dirs', '/foo', '--include_dirs', '/bar' ],
+  ) };
+
+  ok $mb = Module::Build->resume;
+  is_deeply $mb->include_dirs, ['/foo', '/bar'], 'Should have include dirs';
+
+  eval { Module::Build->run_perl_script(
+      'Build.PL', [],
+      ['--include_dirs', '/foo' ],
+  ) };
+
+  ok $mb = Module::Build->resume;
+  is_deeply $mb->include_dirs, ['/foo'], 'Should have single include dir';
+}
 
 # cleanup
 $dist->remove;
